# HPC.Lab4

./: .gitignore  CMakeLists.txt  README.md
App.2/: CMakeLists.txt  Image.cpp  Image.hpp  kernel.cu  kernel.hpp  main.cpp
App.V2/: CMakeLists.txt
App.V2/App/: CMakeLists.txt  Image.cpp  Image.hpp  ImageIO.cpp  ImageIO.hpp  main.cpp
App.V2/kernel/: CMakeLists.txt  kernel.cu  kernel.cuh
App.V3/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  kernel.cu  kernel.cuh  kernel.hpp  main.cpp
cmake/: FindFreeImage.cmake
